--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
     "chai": "^5.1.1",
     "eslint": "^9.8.0",
+    "globals": "^15.13.0",
     "mocha": "^10.7.0",
     "node-fetch": "^3.3.2"
   }
