--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,6 @@ jobs:
         run: yarn lint
       - name: Build Docker image
         run: |
-          docker build -t <alaureyshogent>/webapp:latest .
+          docker build -t alaureyshogent/webapp:latest .
 
 
