--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ jobs:
       - name: Lint the code
         run: yarn lint
       - name: Build Docker image
-        run: |
-          docker build -t alaureyshogent/webapp:latest .
+        run: docker build -t alaureyshogent/webapp:latest .
 
 
